styles(client:navbar): fix btn gaps

--- a/client/src/styles/navbar.css
+++ b/client/src/styles/navbar.css
@@ -62,7 +62,8 @@
 #nav-btns {
 	margin-left: auto;
 	display: flex;
-	gap: 0.2rem;
+	gap: 1rem;
+	width: fit-content;
 	align-items: center;
 }
 
